# coopersat

./: LICENSE  README.md  RefSolver.hs  Test.hs  coopersat.cabal
Data/Integer/: CooperSAT.hs
Data/Integer/CooperSAT/: Normalise.hs  Sem.hs  Syntax.hs
