name:                coopersat
--                   +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis: Cooper's algorithm for QFLIA
homepage:            http://github.com/mpolney/coopersat
license:             BSD2
license-file:        LICENSE
author:              Michael Olney <michael@spectralforms.com>
maintainer:          Michael Olney <michael@spectralforms.com>
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10
library
    build-depends:      base >=4.9, containers >=0.5.7.1, random >=1.1
    exposed-modules:    Data.Integer.CooperSAT

    default-language:   Haskell98

Test-Suite tests
    type: exitcode-stdio-1.0
    main-is: Test.hs

    build-depends:      base >=4.9, containers >=0.5.7.1, random >=1.1
    build-depends:      presburger >=1.3.1
    build-depends:      HUnit

    default-language:   Haskell98

