name:                   coopersat
version:                0.1.0
synopsis:               Cooper's algorithm for QFLIA
homepage:               http://github.com/mpolney/coopersat
license:                BSD2
license-file:           LICENSE
author:                 Michael Olney <michael@spectralforms.com>
maintainer:             Michael Olney <michael@spectralforms.com>
category:               Algorithms
build-type:             Simple
cabal-version:          >=1.10
library
    build-depends:      base == 4.*, containers >= 0.5.7.1 && < 0.6,
                        random >= 1.1 && < 1.2
    exposed-modules:    Data.Integer.CooperSAT,
                        Data.Integer.CooperSAT.Syntax,
                        Data.Integer.CooperSAT.Sem

    default-language:   Haskell98

Test-Suite tests
    type:               exitcode-stdio-1.0
    main-is:            Test.hs

    build-depends:      base == 4.*, containers >= 0.5.7.1 && < 0.6,
                        random >= 1.1 && < 1.2
    build-depends:      presburger >= 1.3.1 && < 1.4
    build-depends:      HUnit >= 1.3.1.1 && < 1.4

    default-language:   Haskell98

